# microsite

./: CONTRIBUTING.md  pyproject.toml  site.toml
content/: _index.md  projects.md
content/blog/decision-trees/: index.md
content/blog/linear-algebra/: index.md
src/: build.py  utils.py
static/: code.css  robots.txt  site.webmanifest  styles.css
templates/: base.html  home.html  post.html
templates/partials/: math.html  progress-bar.html  show-tags.html  sidenotes.html
